--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,15 @@
 /* load font */
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');*/
+
+@font-face {
+    font-family: "Fira Sans";
+    src: url("/fonts/fira.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Fira Sans Light";
+    src: url("/fonts/fira-light.ttf") format("truetype");
+}
 
 :root {
     /* theme colors */
